=== WebCore-416.12 ===

2005-10-19  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt.

        Fixed <rdar://problem/4243807> Denver Regression: DOM returns lower case strings for tags in empty document

        * khtml/html/html_documentimpl.cpp:
        (HTMLDocumentImpl::HTMLDocumentImpl): initialize hMode to Html4.

=== WebCore-416.11 ===

2005-10-11  Timothy Hatcher  <timothy@apple.com>

        Merged fix from TOT to Safari-Den-branch

    2005-10-10  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by eric
        
        <rdar://problem/4283218> M-JPEG / Server Push and JavaScript
        
        Ignore multipart loads in numRequests, call checkCompleted() after each section is complete.

        * khtml/misc/loader.cpp:

=== WebCore-416.10 ===

2005-10-05  Timothy Hatcher  <timothy@apple.com>

        Merged fix from TOT to Safari-Den-branch

    2005-10-04  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

	    <rdar://problem/4285236> Denver Regression: crash repeatedly reloading www.supermanhomepage.com
	
	    I couldn't figure out how to make a reproducible test case for this. The failure is
	    random memory trashing.

        * khtml/ecma/kjs_events.cpp:
        (KJS::JSAbstractEventListener::handleEvent):

=== WebCore-416.9 ===

2005-10-03  Timothy Hatcher  <timothy@apple.com>

        Merged fix from TOT to Safari-Den-branch

    2005-10-03  Justin Garcia  <justin.garcia@apple.com>

		Fixes <rdar://problem/4275492> REGRESSION (SuTiDenver): EMBED tag with bogus type attribute downloads .wmv file twice (gorillamask.net)

        Reviewed by geoff, darin

        * khtml/khtml_part.cpp:
        (KHTMLPart::handleFallbackContent):
        Don't handle fallback content for <embed> tags.

=== Safari-416.8 ===

2005-09-16  Timothy Hatcher  <timothy@apple.com>

        Merged fix from TOT to Safari-Den-branch

    2005-09-14  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by john
        